# GrammarGraph

./: .gitignore  DEMO.ipynb  Pipfile  README.ipynb  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
DEMO/: DEMO.md
grammar_graph/: gg.py
grammar_graph/tests/: test_gg.py
src/grammar_graph/: gg.py  helpers.py  type_defs.py
tests/: test_gg.py
