[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "grammar_graph"
version = "0.1.15"
authors = [
  { name="Dominic Steinhöfel", email="dominic.steinhoefel@cispa.de" },
]
description = "Graphs from Context-Free Grammars."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/GrammarGraph/"
"Bug Tracker" = "https://github.com/rindPHI/GrammarGraph/issues"