[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "grammar_graph"
authors = [
    { name = "Dominic Steinhoefel", email = "dominic.steinhoefel@cispa.de" },
]
description = "Graphs from Context-Free Grammars."
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version", "readme"]

dependencies = [
    "fibheap>=0.2.1",
    "graphviz>=0.20",
    "wheel>=0.37.1",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/GrammarGraph/"
"Bug Tracker" = "https://github.com/rindPHI/GrammarGraph/issues"

[project.optional-dependencies]
test = [
    "fuzzingbook>=1.1",
    "pytest-pycharm>=0.7.0",
    "pytest-xdist==2.5.0",
    "pytest>=6.2.5",
]
dev = [
    "black>=22.8.0",
    "build>=0.8.0",
]

[tool.setuptools.dynamic]
version = { attr = "grammar_graph.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.black]
line-length = 88
target-version = ['py310']
