[metadata]
name = grammar_graph
version = attr: grammar_graph.__version__
author = Dominic Steinhöfel
author_email = dominic.steinhoefel@cispa.de
description = Graphs from Context-Free Grammars.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/GrammarGraph
project_urls =
    Bug Tracker = https://github.com/rindPHI/GrammarGraph/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
     fibheap>=0.2.1
     graphviz>=0.20
     wheel>=0.37.1

[options.extras_require]
test =
    fuzzingbook>=1.1
    pytest-pycharm>=0.7.0
    pytest-xdist==2.5.0
    pytest>=6.2.5

[options.packages.find]
where = src